--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,9 @@
 [package]
-name = "cse416-rust"
+name = "orcanet-rust"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[[bin]] # Bin to run the gRPC server
-name = "market-server"
-path = "src/market/server.rs"
-
 [[bin]] # Bin to run the gRPC client
 name = "peer-node"
 path = "src/peer-node/client.rs"
@@ -24,6 +19,9 @@ serde = { version = "1.0.197", features = ["derive"] }
 tokio-util = "0.7.10"
 anyhow = "1.0.80"
 reqwest = "0.11.24"
+glob = "0.3.1"
+sha2 = "0.10.8"
+mime_guess = "2.0.4"
 
 [build-dependencies]
 tonic-build = "0.11"
