--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -1,24 +1,27 @@
-name: Rust
+name: Auto Formatter
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    permissions: # Job-level permissions configuration starts here
+      contents: write # 'write' access to repository contents
+      pull-requests: write # 'write' access to pull requests
     steps:
-    - uses: actions/checkout@v3
-    - name: Format
-      run: cargo fmt
-    - name: update
-      run: |
-        git commit -am 'GITHUB ACTIONS: auto-formatter'
-        git push origin HEAD:main
+      - uses: actions/checkout@v4
+      - name: Format
+        run: cargo fmt
+      - name: update
+        run: |
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git commit -am 'GITHUB ACTIONS: auto-formatter'
+          git push origin HEAD:main
