--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
+  format:
     runs-on: ubuntu-latest
     permissions: # Job-level permissions configuration starts here
       contents: write # 'write' access to repository contents
@@ -24,4 +24,7 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git commit -am 'GITHUB ACTIONS: auto-formatter'
-          git push origin HEAD:main
+      - name: Push
+        if: steps.verify_diff.outputs.changed == 'true'
+        run: git push origin HEAD:main
+
