--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -20,11 +20,9 @@ jobs:
       - name: Format
         run: cargo fmt
       - name: update
+        if: steps.verify_diff.outputs.changed == 'true'
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git commit -am 'GITHUB ACTIONS: auto-formatter'
-      - name: Push
-        if: steps.verify_diff.outputs.changed == 'true'
-        run: git push origin HEAD:main
-
+          git push origin HEAD:main
