--- a/market_test_client/Cargo.toml
+++ b/market_test_client/Cargo.toml
@@ -6,3 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+market_proto = { path = "../market_proto" }
+tonic = { version = "0.11.0" }
+tokio = { version = "1.36.0", features = ["full"] }
+anyhow = { version = "1.0.81" }
+clap = { version = "4.5.3", features = ["derive"] }
+
+[build-dependencies]
+tonic-build = "0.11.0"
+
+[dev-dependencies]
+pretty_assertions = { version = "1.4.0" }
