--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
-members = ["market_proto", "market_server", "market_test_client"]
+members = [ "market_dht","market_proto", "market_server", "market_test_client"]
 resolver = "2"
