--- a/market_dht/Cargo.toml
+++ b/market_dht/Cargo.toml
@@ -19,3 +19,5 @@ libp2p = { version = "0.53.2", features = [
   "ed25519",
   "yamux",
 ] }
+futures = { version = "0.3.30" }
+thiserror = { version = "1.0.58" }
