--- a/market_dht/Cargo.toml
+++ b/market_dht/Cargo.toml
@@ -21,3 +21,6 @@ libp2p = { version = "0.53.2", features = [
 ] }
 futures = { version = "0.3.30" }
 thiserror = { version = "1.0.58" }
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
