--- a/market_dht/Cargo.toml
+++ b/market_dht/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.36.0", features = ["full"] }
 anyhow = { version = "1.0.81" }
 libp2p = { version = "0.53.2", features = [
   "dns",
@@ -21,6 +20,14 @@ libp2p = { version = "0.53.2", features = [
 ] }
 futures = { version = "0.3.30" }
 thiserror = { version = "1.0.58" }
+log = { version = "0.4.21" }
+cid = { version = "0.11.1" }
+multihash-codetable = { version = "0.1.2", features = ["sha2"] }
+bincode = { version = "1.3.3" }
+serde = { version = "1.0.130", features = ["derive"] }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
+tokio = { version = "1.36.0", features = ["full"] }
+tracing = { version = "0.1.40", features = ["log"] }
+tracing-subscriber = "0.3.18"
