--- a/market_dht/Cargo.toml
+++ b/market_dht/Cargo.toml
@@ -31,3 +31,4 @@ pretty_assertions = "1.4.0"
 tokio = { version = "1.36.0", features = ["full"] }
 tracing = { version = "0.1.40", features = ["log"] }
 tracing-subscriber = "0.3.18"
+tokio-test = { version = "0.4.4" }
