--- a/market_dht/Cargo.toml
+++ b/market_dht/Cargo.toml
@@ -17,6 +17,8 @@ libp2p = { version = "0.53.2", features = [
   "quic",
   "ed25519",
   "yamux",
+  "identify",
+  "macros",
 ] }
 futures = { version = "0.3.30" }
 thiserror = { version = "1.0.58" }
@@ -32,3 +34,4 @@ tokio = { version = "1.36.0", features = ["full"] }
 tracing = { version = "0.1.40", features = ["log"] }
 tracing-subscriber = "0.3.18"
 tokio-test = { version = "0.4.4" }
+tracing-log = "0.2.0"
