--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ reqwest = "0.11.24"
 glob = "0.3.1"
 sha2 = "0.10.8"
 mime_guess = "2.0.4"
+config = "0.14.0"
+serde_json = "1.0.115"
 
 [build-dependencies]
 tonic-build = "0.11"
