--- a/market_dht/Cargo.toml
+++ b/market_dht/Cargo.toml
@@ -24,13 +24,13 @@ futures = { version = "0.3.30" }
 thiserror = { version = "1.0.58" }
 log = { version = "0.4.21" }
 cid = { version = "0.11.1" }
+tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync"] }
 multihash-codetable = { version = "0.1.2", features = ["sha2"] }
 bincode = { version = "1.3.3" }
 serde = { version = "1.0.130", features = ["derive"] }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
-tokio = { version = "1.36.0", features = ["full"] }
 tracing = { version = "0.1.40", features = ["log"] }
 tracing-subscriber = "0.3.18"
 tokio-test = { version = "0.4.4" }
