feat(dht): add feature support for check_holders and register_file
`check_holders` isn't exactly complete since it only returns the
peer_ids at the moment. I also need to figure out what to do with the
`FinishedWithNoAdditionalRecord` case.

--- a/market_dht/Cargo.toml
+++ b/market_dht/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = { version = "1.0.81" }
 libp2p = { version = "0.53.2", features = [
+  "cbor",
   "dns",
   "kad",
   "noise",
