--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ reqwest = "0.11.24"
 glob = "0.3.1"
 sha2 = "0.10.8"
 mime_guess = "2.0.4"
+uuid = { version = "1.8.0", features = ["v4"] }
 
 [build-dependencies]
 tonic-build = "0.11"
