--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,14 @@ axum = { version = "0.7.4", features = ["macros"] }
 serde = { version = "1.0.197", features = ["derive"] }
 tokio-util = "0.7.10"
 anyhow = "1.0.80"
-reqwest = "0.11.24"
+reqwest = "0.12.2"
 glob = "0.3.1"
 sha2 = "0.10.8"
 mime_guess = "2.0.4"
 config = "0.14.0"
 serde_json = "1.0.115"
+base64 = "0.22.0"
 
 [build-dependencies]
 tonic-build = "0.11"
+serde = { version = "1.0.197", features = ["derive"] }
