--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -2,7 +2,7 @@ name: Auto Formatter
 
 on:
   push:
-    branches: ["main"]
+    branches: ["*"]
 
 env:
   CARGO_TERM_COLOR: always
@@ -24,4 +24,4 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git commit -am 'GITHUB ACTIONS: auto-formatter'
-          git push origin HEAD:main
+          git push origin HEAD:${GITHUB_REF##*/}
