--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -18,8 +18,12 @@ jobs:
       - uses: actions/checkout@v4
       - name: Format
         run: cargo fmt
+      - name: Verify Diff
+        id: verify_diff
+        run: |
+          git diff --exit-code
+          echo "::set-output name=changed::$(if [ $? -eq 0 ]; then echo 'false'; else echo 'true'; fi)"
       - name: update
-        if: steps.verify_diff.outputs.changed == 'true'
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
