--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -2,7 +2,7 @@ name: Auto Formatter
 
 on:
   push:
-    branches: ["main"]
+    branches: ["*"]
 
 env:
   CARGO_TERM_COLOR: always
@@ -18,10 +18,18 @@ jobs:
       - uses: actions/checkout@v4
       - name: Format
         run: cargo fmt
+      - name: Verify Diff
+        id: verify_diff
+        run: |
+          if git diff --exit-code; then
+            echo "::set-env name=changes_exist::true"
+          else
+            echo "::set-env name=changes_exist::false"
+          fi
       - name: update
-        if: steps.verify_diff.outputs.changed == 'true'
+        if: ${{ env.changes_exist == 'true' }}
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git commit -am 'GITHUB ACTIONS: auto-formatter'
-          git push origin HEAD:main
+          git push origin HEAD:${GITHUB_REF##*/}
