--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -20,7 +20,7 @@ jobs:
         run: cargo fmt
       - name: update
         run: |
-          if git diff --exit-code; then
+          if ! git diff --exit-code; then
             git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git config --local user.name "github-actions[bot]"
             git commit -am 'GITHUB ACTIONS: auto-formatter'
