--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -1,4 +1,4 @@
-name: Rust Build & Test
+name: CLI Test
 
 on:
   push:
@@ -12,15 +12,9 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    needs: build
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up Rust
-        uses: actions/setup-rust@v1
-        with:
-          rust-version: 'stable'
 
       - name: Run tests
         run: cargo test --verbose
