--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -9,9 +9,20 @@ on:
       - '*'
 
 jobs:
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Build project
+        run: cargo build --verbose
+
   test:
     name: Test
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
