--- a/.github/workflows/market.yml
+++ b/.github/workflows/market.yml
@@ -1,24 +1,28 @@
-name: Rust
+name: Market CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches: [ "*" ]
+    paths:
+      - market/**
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Install protobuf-compiler
       run: sudo apt update && sudo apt install -y protobuf-compiler
     - name: Build
-      run: cargo build --verbose
+      run: cd market && cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cd market && cargo test --verbose
+  format:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: $GITHUB_REPOSITORY/.github/workflows/fmt.yml@main # use current repo's fmt.yml
+      with:
+        config-path: "market"
