use github context in an environment variable to test if this will compile and run action

--- a/.github/workflows/market.yml
+++ b/.github/workflows/market.yml
@@ -24,7 +24,9 @@ jobs:
   format:
     name: Format
     runs-on: ubuntu-latest
+    env:
+      REPONAME: ${{ github.repository }}
     steps:
-    - uses: ${{ github.repository }}/.github/workflows/fmt.yml@main # use current repo's fmt.yml
+    - uses: $REPONAME/.github/workflows/fmt.yml@main # use current repo's fmt.yml
       with:
         config-path: "market"
