--- a/.github/workflows/peernode.yml
+++ b/.github/workflows/peernode.yml
@@ -14,8 +14,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: test
-      run: echo ${{ toJson(github) }}
     - name: Install protobuf-compiler
       run: sudo apt update && sudo apt install -y protobuf-compiler
     - name: Build
@@ -27,6 +25,8 @@ jobs:
     env:
       REPONAME: ${{ github.repository }}
     steps:
-    - uses: $REPONAME/.github/workflows/fmt.yml@main # use current repo's fmt.yml
+    - name: print env
+      run: echo $REPONAME
+    - uses: ./github/workflows/fmt.yml # use current repo's fmt.yml
       with:
         config-path: "peernode"
