--- a/.github/workflows/market.yml
+++ b/.github/workflows/market.yml
@@ -14,7 +14,7 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Install protobuf-compiler
       run: sudo apt update && sudo apt install -y protobuf-compiler
     - name: Build
@@ -27,6 +27,9 @@ jobs:
     env:
       REPONAME: ${{ github.repository }}
     steps:
-    - uses: $REPONAME/.github/workflows/fmt.yml@main # use current repo's fmt.yml
+    - uses: actions/checkout@v4
+    - name: Print Env
+      run: ls
+    - uses: ./.github/workflows/fmt.yml@main # use current repo's fmt.yml
       with:
         config-path: "market"
