--- a/.github/workflows/peernode.yml
+++ b/.github/workflows/peernode.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
     - name: Run Format Workflow
+      if: ${{ !contains(github.event.head_commit.message, 'GITHUB ACTIONS') }}
       uses: ./.github/workflows/fmt # use current repo's fmt.yml
       with:
         config-path: "peernode"
