--- a/.github/workflows/fmt/action.yml
+++ b/.github/workflows/fmt/action.yml
@@ -13,17 +13,18 @@ env:
 jobs:
   format:
     runs-on: ubuntu-latest
-    if: ${{ !contains(github.event.head_commit.message, 'GITHUB ACTIONS') }}
     permissions: # Job-level permissions configuration starts here
       contents: write # 'write' access to repository contents
       pull-requests: write # 'write' access to pull requests
+    env:
+      CONFIG_PATH: ${{ github.event.inputs.config-path }}
     steps:
       - uses: actions/checkout@v4
       - name: Format
         run: cargo fmt
       - name: update
         run: |
-          cd ${{ inputs.config-path }}
+          cd $CONFIG_PATH
           if ! git diff --exit-code; then
             git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git config --local user.name "github-actions[bot]"
