--- a/.github/workflows/peernode.yml
+++ b/.github/workflows/peernode.yml
@@ -29,6 +29,6 @@ jobs:
       uses: actions/checkout@v4
     - name: Run Format Workflow
       if: ${{ !contains(github.event.head_commit.message, 'GITHUB ACTIONS') }}
-      uses: ./.github/workflows/fmt.yml # use current repo's fmt.yml
+      uses: ./.github/workflows/fmt # use current repo's fmt.yml
       with:
         config-path: "peernode"
