--- a/.github/workflows/market.yml
+++ b/.github/workflows/market.yml
@@ -19,11 +19,17 @@ jobs:
       run: sudo apt update && sudo apt install -y protobuf-compiler
     - name: Build
       run: cd market && cargo build --verbose
-    - name: Run tests
-      run: cd market && cargo test --verbose
+  test:
+    name: Test Market
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run tests
+        run: cd market && cargo test --verbose
   format:
     if: ${{ !contains(github.event.head_commit.message, 'GITHUB ACTIONS') }}
     uses: ./.github/workflows/fmt.yml # use current repo's fmt.yml
     with:
-      config-path: "peernode"
+      config-path: "market"
     
