--- a/.github/workflows/peernode.yml
+++ b/.github/workflows/peernode.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "*" ]
     # paths:
-      # - peernode/**
+    #   - peernode/**
 
 env:
   CARGO_TERM_COLOR: always
@@ -13,14 +13,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Install protobuf-compiler
       run: sudo apt update && sudo apt install -y protobuf-compiler
     - name: Build
       run: cd peernode && cargo build --verbose
-    - name: Run tests
-      run: cd peernode && cargo test --verbose
+  test:
+    name: Test Peernode
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run tests
+        run: cd peernode && cargo test --verbose
   format:
+    needs: build
     if: ${{ !contains(github.event.head_commit.message, 'GITHUB ACTIONS') }}
     uses: ./.github/workflows/fmt.yml # use current repo's fmt.yml
     with:
