Allow gh actions runs on pull requests

--- a/.github/workflows/market.yml
+++ b/.github/workflows/market.yml
@@ -5,6 +5,10 @@ on:
     branches: [ "*" ]
     paths:
       - market/**
+  pull_request:
+    branches: [ "*" ]
+    paths:
+      - market/**
 
 env:
   CARGO_TERM_COLOR: always
