--- a/.github/workflows/peernode.yml
+++ b/.github/workflows/peernode.yml
@@ -5,7 +5,11 @@ on:
     branches: [ "*" ]
     paths:
       - peernode/**
-
+  pull_request:
+    branches: [ "*" ]
+    paths:
+      - market/**
+    
 env:
   CARGO_TERM_COLOR: always
 
