--- a/.github/workflows/peernode.yml
+++ b/.github/workflows/peernode.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches: [ "*" ]
     paths:
-      - market/**
+      - peernode/**
     
 env:
   CARGO_TERM_COLOR: always
