--- a/.github/workflows/market.yml
+++ b/.github/workflows/market.yml
@@ -21,16 +21,25 @@ jobs:
     - uses: actions/checkout@v4
     - name: Install protobuf-compiler
       run: sudo apt update && sudo apt install -y protobuf-compiler
+    - name: Cache
+      uses: actions/cache@v3
+      continue-on-error: false
+      with:
+        path: |
+          ~/market/.cargo/bin/
+          ~/market/.cargo/registry/index/
+          ~/market/.cargo/registry/cache/
+          ~/market/.cargo/git/db/
+          market/target/            
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: ${{ runner.os }}-cargo-
     - name: Build
-      run: cd market && cargo build --verbose
-  test:
-    name: Test Market
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run tests
-        run: cd market && cargo test --verbose
+      working-directory: market
+      run: cargo build --verbose
+    - name: Test
+      working-directory: market
+      run: cargo test --verbose
+
   format:
     name: Format Market
     if: ${{ !contains(github.event.head_commit.message, 'GITHUB ACTIONS') }}
