--- a/.github/workflows/peernode.yml
+++ b/.github/workflows/peernode.yml
@@ -20,16 +20,24 @@ jobs:
     - uses: actions/checkout@v4
     - name: Install protobuf-compiler
       run: sudo apt update && sudo apt install -y protobuf-compiler
+    - name: Cache
+      uses: actions/cache@v3
+      continue-on-error: false
+      with:
+        path: |
+          ~/peernode/.cargo/bin/
+          ~/peernode/.cargo/registry/index/
+          ~/peernode/.cargo/registry/cache/
+          ~/peernode/.cargo/git/db/
+          peernode/target/            
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: ${{ runner.os }}-cargo-
     - name: Build
-      run: cd peernode && cargo build --verbose
-  test:
-    name: Test Peernode
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run tests
-        run: cd peernode && cargo test --verbose
+      working-directory: peernode
+      run: cargo build --verbose
+    - name: Test
+      working-directory: peernode
+      run: cargo test --verbose
   format:
     name: Format Peernode
     needs: build
