feat(dht): add autonat protocol

--- a/market_dht/Cargo.toml
+++ b/market_dht/Cargo.toml
@@ -14,6 +14,9 @@ libp2p = { version = "0.53.2", features = [
   "noise",
   "tokio",
   "mdns",
+  "relay",
+  "dcutr",
+  "autonat",
   "tcp",
   "quic",
   "ed25519",
