cli should be mostly working but docker container is not running properly

--- a/peernode/Cargo.toml
+++ b/peernode/Cargo.toml
@@ -26,6 +26,8 @@ uuid = { version = "1.8.0", features = ["v4"] }
 config = "0.14.0"
 serde_json = "1.0.115"
 base64 = "0.22.0"
+ctrlc = "3.4.4"
+ctrlc-async = "3.2.2"
 
 [build-dependencies]
 tonic-build = "0.11"
