--- a/docker/peernode/Dockerfile
+++ b/docker/peernode/Dockerfile
@@ -42,4 +42,4 @@ ENV ORCA_EXTERNAL_IP 127.0.0.1
 ENV ORCA_HTTP_PORT 8080
 
 # Run the binary
-CMD ./peer-node producer add files 100 && ./peer-node producer register -m $ORCA_MARKET_ADDRESS
+CMD ./peer-node producer add files 100 && ./peer-node producer register $ORCA_HTTP_PORT -m $ORCA_MARKET_ADDRESS -i $ORCA_EXTERNAL_IP
