refactor: move projs to separate folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-/target
-node_modules
-*.json
+target/*
+
+*.pb.go
+
+.DS_Store
+
+
+**/.DS_Store
+target
+peernode/files/*
+!peernode/files/.gitkeep
+peernode/download/*
+!peernode/download/.gitkeep
+peernode/config.json
