--- a/peernode/Cargo.toml
+++ b/peernode/Cargo.toml
@@ -11,7 +11,12 @@ path = "src/peer-node/client.rs"
 [dependencies]
 tonic = "0.11"
 prost = "0.12"
-tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
+tokio = { version = "1.0", features = [
+  "macros",
+  "rt-multi-thread",
+  "signal",
+  "fs",
+] }
 clap = { version = "4.5.1", features = ["derive", "cargo"] }
 rand = "0.8.5"
 axum = { version = "0.7.4", features = ["macros"] }
@@ -26,6 +31,7 @@ uuid = { version = "1.8.0", features = ["v4"] }
 config = "0.14.0"
 serde_json = "1.0.115"
 base64 = "0.22.0"
+orcanet-market = { path = "../market" }
 
 [build-dependencies]
 tonic-build = "0.11"
