--- a/market/Cargo.toml
+++ b/market/Cargo.toml
@@ -2,6 +2,9 @@
 name = "orcanet-market"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.73.0"
+license = "MIT"
+repository = "https://github.com/sbu-416-24sp/orcanet-rust"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
