--- a/peernode/Cargo.toml
+++ b/peernode/Cargo.toml
@@ -37,6 +37,7 @@ serde_json = "1.0.115"
 base64 = "0.22.0"
 orcanet-market = { path = "../market" }
 proto = { path = "../proto"}
+async-recursion = "1.1.1"
 
 [build-dependencies]
 tonic-build = "0.11"
