--- a/peernode/Cargo.toml
+++ b/peernode/Cargo.toml
@@ -38,6 +38,7 @@ base64 = "0.22.0"
 orcanet-market = { path = "../market" }
 proto = { path = "../proto"}
 async-recursion = "1.1.1"
+chrono = { version = "0.4.38", features = ["serde"] }
 
 [build-dependencies]
 tonic-build = "0.11"
