--- a/peernode/Cargo.toml
+++ b/peernode/Cargo.toml
@@ -30,7 +30,7 @@ axum = { version = "0.7.4", features = ["macros"] }
 serde = { version = "1.0.197", features = ["derive"] }
 tokio-util = "0.7.10"
 anyhow = "1.0.80"
-reqwest = "0.12.2"
+reqwest = { version = "0.12.2", features = ["json"] }
 glob = "0.3.1"
 sha2 = "0.10.8"
 mime_guess = "2.0.4"
