--- a/.github/workflows/peernode.yml
+++ b/.github/workflows/peernode.yml
@@ -49,10 +49,29 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: Start server and run tests
+    - uses: actions/checkout@v4
+    - name: Cache
+      uses: actions/cache@v3
+      continue-on-error: false
+      with:
+        path: |
+          ~/peernode/.cargo/bin/
+          ~/peernode/.cargo/registry/index/
+          ~/peernode/.cargo/registry/cache/
+          ~/peernode/.cargo/git/db/
+          peernode/target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: ${{ runner.os }}-cargo-
+    - name: Start server and run sea pig tests
       working-directory: peernode
       run: |
         cargo run --bin peer-node-server -F test_local_market &
         sleep 5 &&
         cargo test seapig_test --verbose -- --test-threads=1 --ignored
+    - name: Start server and run manta tests
+      working-directory: peernode
+      run: |
+        cargo run --bin peer-node-server -F test_local_market &
+        sleep 5 &&
+        cargo test manta_test --verbose -- --test-threads=1 --ignored
 
