Register file on /upload

--- a/.github/workflows/peernode.yml
+++ b/.github/workflows/peernode.yml
@@ -38,30 +38,7 @@ jobs:
     - name: Test
       working-directory: peernode
       run: cargo test --verbose
-  format:
-    name: Format Peernode
-    needs: build
-    if: ${{ !contains(github.event.head_commit.message, 'GITHUB ACTIONS') }}
-    uses: ./.github/workflows/fmt.yml # use current repo's fmt.yml
-    with:
-      config-path: "peernode"
-  test-server:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-    - name: Cache
-      uses: actions/cache@v3
-      continue-on-error: false
-      with:
-        path: |
-          ~/peernode/.cargo/bin/
-          ~/peernode/.cargo/registry/index/
-          ~/peernode/.cargo/registry/cache/
-          ~/peernode/.cargo/git/db/
-          peernode/target/
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: ${{ runner.os }}-cargo-
+
     - name: Start server and run sea pig tests
       working-directory: peernode
       run: |
@@ -73,5 +50,12 @@ jobs:
       run: |
         cargo run --bin peer-node-server -F test_local_market &
         sleep 5 &&
-        cargo test manta_test --verbose -- --test-threads=1 --ignored
+        cargo test bubbleguppies_test --verbose -- --test-threads=1 --ignored
 
+  format:
+    name: Format Peernode
+    needs: build
+    if: ${{ !contains(github.event.head_commit.message, 'GITHUB ACTIONS') }}
+    uses: ./.github/workflows/fmt.yml # use current repo's fmt.yml
+    with:
+      config-path: "peernode"
