--- a/.github/workflows/peernode.yml
+++ b/.github/workflows/peernode.yml
@@ -48,8 +48,9 @@ jobs:
     - name: Start server and run manta tests
       working-directory: peernode
       run: |
+        cargo build --bin peer-node-server -F test_local_market &&
         cargo run --bin peer-node-server -F test_local_market &
-        sleep 5 &&
+        sleep 10 &&
         cargo test bubbleguppies_test --verbose -- --test-threads=1 --ignored
 
   format:
