--- a/peernode/Cargo.toml
+++ b/peernode/Cargo.toml
@@ -12,6 +12,10 @@ path = "src/peer-node/client.rs"
 name = "peer-node-server"
 path = "src/peer-node/server.rs"
 
+[features]
+# a local mock market server for testing
+test_local_market = []
+
 [dependencies]
 tonic = "0.11"
 prost = "0.12"
