--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,9 +1,16 @@
 [package]
-name = "peernode"
+name = "server"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[[bin]] # Bin to run the http server
+name = "server"
+path = "src/server.rs"
+
+[features]
+test_local_market = []
 
 [dependencies]
 tonic = "0.11"
@@ -30,6 +37,7 @@ serde_json = "1.0.115"
 base64 = "0.22.0"
 orcanet-market = { path = "../market" }
 proto = { path = "../proto"}
+peernode = { path = "../peernode" }
 async-recursion = "1.1.1"
 chrono = { version = "0.4.38", features = ["serde"] }
 
