--- a/peernode/Cargo.toml
+++ b/peernode/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+test_local_market = []
+
 [dependencies]
 tonic = "0.11"
 prost = "0.12"
