--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,6 +20,7 @@ tokio = { version = "1.0", features = [
 ] }
 rand = "0.8.5"
 axum = { version = "0.7.4", features = ["macros"] }
+clap = { version = "4.5.1", features = ["derive", "cargo"] }
 serde = { version = "1.0.197", features = ["derive"] }
 tokio-util = "0.7.10"
 anyhow = "1.0.80"
